# rust_book

./: createChap.ps1  main.rs
h_references_borrowing/: Cargo.toml  nodemon.json
h_references_borrowing/src/: main.rs
i_slice/: Cargo.toml
i_slice/src/: main.rs
j_structs/: Cargo.toml
j_structs/src/: main.rs
k_enum_val/: Cargo.toml
k_enum_val/src/: main.rs
l_managing_growing_projects/: Cargo.toml
l_managing_growing_projects/restaurant/: Cargo.toml
l_managing_growing_projects/src/: main.rs
m_common_collections/: Cargo.toml  nodemon.json
m_common_collections/src/: main.rs
n_chapter_8_projects/: Cargo.toml
n_chapter_8_projects/src/: main.rs
o_error_handling/: Cargo.toml
o_error_handling/src/: main.rs
p_generic_traits_lifetimes/: Cargo.toml
p_generic_traits_lifetimes/src/: main.rs
q_testing/: Cargo.toml
q_testing/src/: get.rs  lib.rs
q_testing/tests/: integration_test.rs
r_minigrep/: Cargo.toml  nodemon.json
r_minigrep/src/: lib.rs  main.rs
s_functional_lang/: Cargo.toml
s_functional_lang/src/: closures.rs  iterators.rs  main.rs  performance.rs
t_cargo_crates/: Cargo.toml
t_cargo_crates/src/: binaries.rs  custom_commands.rs  lib.rs  main.rs  publish_crate.rs  release_builds.rs  workspaces.rs
u_workspaces/: Cargo.toml
v_smart_pointers/: Cargo.toml
v_smart_pointers/src/: a_box.rs  b_deref.rs  c_drop.rs  d_rc.rs  d_ref_smart_pointer.rs  e_ref_cell.rs  (+2 more)
w_concurrency/: Cargo.toml
x_oop/: Cargo.toml
y_advanced_features/: Cargo.toml
z_pattern_matching/: Cargo.toml
zz_http_server/: 404.html  Cargo.toml  hello.html
(+20 files in other folders)
