[package]
name = "t_cargo_crates"
version = "0.1.0"
authors = ["Himujjal <upadhyayahimujjal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"   # smaller builds
